--- a/sites/travis-ci.css
+++ b/sites/travis-ci.css
@@ -2,10 +2,10 @@
 host: travis-ci.org
 */
 
-/* delete left sidebar */
-/* the only useful item there is the search box,
+/* delete sidebars */
+/* the only useful item there is the search box in the left sidebar,
 XXX relocate it */
-#left {display: none;}
+#left, #right {display: none;}
 
 /* hide follow logs link due to it fidgeting */
 #log a {display:none;}
