--- a/sites/google-maps.css
+++ b/sites/google-maps.css
@@ -1,3 +1,34 @@
 /**
 host: maps.google.com
 */
+
+/* disable ads */
+#topads {
+	display:none;
+}
+
+/* google logo */
+#gbq1 {
+	display:none;
+}
+
+/* sign in link */
+.gb_tb.gb_g {
+	display:none;
+}
+
+/* useless footer */
+#lhsf {
+	display:none;
+}
+
+/* useless footer on map */
+#copyright {
+	display:none;
+}
+
+/* useless map elements */
+#scalecontrol, #scalecontrol_inline, #map_overview, #my_location_button, #compass,
+.flmcpan, #lmc3d > div:nth-child(2) {
+	display:none;
+}
