--- a/sites/github-extra.css
+++ b/sites/github-extra.css
@@ -45,3 +45,6 @@ svg {
 
 /* email address warning */
 .flash-warn { display: none; }
+
+/* repository navigation */
+.repository-sidebar {display:none;}
